finish adding party buffs, meta gem req. display, fix alignment issues with images, datastorage of partybuffs, sorting for weapons

--- a/css/Main.css
+++ b/css/Main.css
@@ -659,6 +659,14 @@ td {
   font-weight: 700;
 }
 
+.relative-wrapper {
+  position: relative;
+}
+.relative-wrapper-spells {
+  position: relative;
+  top: 15px;
+}
+
 @media (max-width: 100px) {
   .u-section-1 .u-sheet-1 {
     min-height: 1033px;
